--- a/src/app/main/components/event/event.component.scss
+++ b/src/app/main/components/event/event.component.scss
@@ -168,6 +168,17 @@ p, span {
     max-height: 360px;
     overflow: auto;
 }
+.participants__list::-webkit-scrollbar {
+    width: 8px;
+}
+.participants__list::-webkit-scrollbar {
+    height: 5px;
+    background-color: #000000;
+}
+.participants__list::-webkit-scrollbar-thumb {
+    background-color: #FFFFFF;
+    border-radius: 0;
+}
 .participants__cell {
     display: flex;
     align-items: center;
@@ -176,6 +187,9 @@ p, span {
     background: linear-gradient(to right, #959595 15%, #353535 15% 98%, #959595 98%);
     margin-bottom: 5px;
     cursor: pointer;
+}
+.participants__cell:last-child {
+    margin: 0;
 }
 .participants__cell_you {
     background: linear-gradient(to right, #FFFF00 15%, #353535 15% 98%, #FFFF00 98%);
