--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -3,7 +3,7 @@
     <form [formGroup]="authForm" novalidate (ngSubmit)="sendService()">
         <div class="box">
             <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;">
-                <mat-label>Введите логин</mat-label>
+                <mat-label>Введите телефон или почту</mat-label>
                 <input matInput formControlName="username">
             </mat-form-field>
 
