--- a/src/app/auth/components/register-profile/register-profile.component.html
+++ b/src/app/auth/components/register-profile/register-profile.component.html
@@ -66,7 +66,7 @@
             <div>
                 <button mat-raised-button [disabled]="regForm.invalid" class="btn">Отправить</button>
             </div>
-            <p [routerLink]="['../main']" class="subtitle">Заполнить позже</p>
+            <p [routerLink]="['']" class="subtitle">Заполнить позже</p>
         </div>
     </form>
 </div>
