--- a/src/app/main/components/change-password/change-password.component.html
+++ b/src/app/main/components/change-password/change-password.component.html
@@ -1,28 +1,14 @@
 <div class="container">
     <p class="title">Изменить пароль</p>
-    <form [formGroup]="changeForm" novalidate (ngSubmit)="checkForm()">
+    <form [formGroup]="changeForm" novalidate (ngSubmit)="sendService()">
         <div class="box">
-            <mat-form-field appearance="fill" style="width: 280px;">
-                <mat-label>Новый пароль</mat-label>
-                <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
-                <button class="btn__icon" type="button" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                </button>
+            <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;">
+                <mat-label>E-mail</mat-label>
+                <input matInput formControlName="email">
             </mat-form-field>
 
-            <mat-form-field appearance="fill" style="width: 280px;">
-                <mat-label>Повторите пароль</mat-label>
-                <input matInput [type]="hide2 ? 'password' : 'text'" formControlName="password2">
-                <button class="btn__icon" type="button" mat-icon-button matSuffix (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                    <mat-icon>{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
-                </button>
-            </mat-form-field>
-
-            <div>
-                <button mat-raised-button class="btn" [routerLink]="['../user']" type="button">Отмена</button>
-            </div>
             <div style="margin-top: 10px">
-                <button mat-raised-button class="btn" [disabled]="changeForm.invalid || changeForm.disabled">Изменить</button>
+                <button mat-raised-button class="btn" [disabled]="changeForm.invalid || changeForm.disabled">Отправить письмо на почту</button>
             </div>
         </div>
     </form>
