--- a/src/app/main/components/about-us/about-us.component.html
+++ b/src/app/main/components/about-us/about-us.component.html
@@ -37,4 +37,5 @@
             </div>
         </div>
     </div>
+    <p class="privacy_policy" [routerLink]="['../privacy-policy']">Политика обработки персональных данных</p>
 </div>
