--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -3,27 +3,27 @@
     <form [formGroup]="regForm" novalidate (ngSubmit)="checkForm()">
         <div class="box">
 
-            <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;">
+            <mat-form-field class="example-full-width" appearance="fill" style="width: 280px;">
                 <mat-label>Имя</mat-label>
                 <input matInput formControlName="first_name">
             </mat-form-field>
 
-            <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;">
+            <mat-form-field class="example-full-width" appearance="fill" style="width: 280px;">
                 <mat-label>Фамилия</mat-label>
                 <input matInput formControlName="last_name">
             </mat-form-field>
 
-            <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;">
+            <mat-form-field class="example-full-width" appearance="fill" style="width: 280px;">
                 <mat-label>Телефон</mat-label>
                 <input matInput formControlName="phone_number" prefix="+7" mask="(000) 000-00-00">
             </mat-form-field>
 
-            <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;">
+            <mat-form-field class="example-full-width" appearance="fill" style="width: 280px;">
                 <mat-label>E-mail</mat-label>
                 <input matInput formControlName="email">
             </mat-form-field>
             
-            <mat-form-field appearance="fill" style="width: 250px;">
+            <mat-form-field appearance="fill" style="width: 280px;">
                 <mat-label>Придумайте пароль</mat-label>
                 <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
                 <button class="btn__icon" type="button" mat-icon-button matSuffix 
@@ -32,7 +32,7 @@
                 </button>
             </mat-form-field>
 
-            <mat-form-field appearance="fill" style="width: 250px;">
+            <mat-form-field appearance="fill" style="width: 280px;">
                 <mat-label>Повторите пароль</mat-label>
                 <input matInput [type]="hide2 ? 'password' : 'text'" formControlName="password2">
                 <button class="btn__icon" type="button" mat-icon-button matSuffix 
@@ -41,8 +41,13 @@
                 </button>
             </mat-form-field>
 
+            <section class="example-section" style="width: 280px;">
+                <mat-checkbox class="example-margin" (change)="acceptPP($event.checked)" style="color: rgba(255,255,255,.7);">Я принимаю условия: </mat-checkbox>
+            </section>
+            <span style="color: blueviolet; cursor: pointer; margin: 10px 0;" [routerLink]="['../../privacy-policy']">Политика конфидециальности</span>
+
             <div>
-                <button mat-raised-button [disabled]="regForm.invalid || regForm.disabled" class="btn">Зарегестрироваться</button>
+                <button mat-raised-button [disabled]="regForm.invalid || regForm.disabled || !isPP" class="btn">Зарегестрироваться</button>
             </div>
             <p [routerLink]="['../login']" class="subtitle">Уже зарегистрированы?</p>
         </div>
