--- a/src/app/main/components/event-chat/event-chat.component.html
+++ b/src/app/main/components/event-chat/event-chat.component.html
@@ -30,9 +30,12 @@
     </p>
     <div *ngIf="commentWindow">
         <div *ngFor="let comment of comments?.results">
-            <div class="box__comment" [matMenuTriggerFor]="menu" (click)="openMenu(comment)">
-                <span class="user__comment" style="user-select: none;">{{comment.user.full_name}}</span>
-                <p class="text__comment">{{comment.comment}} <span style="user-select: none;" class="time__comment">{{comment.created_at | date: 'HH:mm'}}</span></p>
+            <div class="flex">
+                <img src="{{comment.user.profile.photo_small}}" alt="avatar" class="avatar">
+                <div class="box__comment" [matMenuTriggerFor]="menu" (click)="openMenu(comment)">
+                    <span class="user__comment" style="user-select: none;">{{comment.user.full_name}}</span>
+                    <p class="text__comment">{{comment.comment}} <span style="user-select: none;" class="time__comment">{{comment.created_at | date: 'HH:mm'}}</span></p>
+                </div>
             </div>
         </div>
     </div>
