--- a/src/app/main/components/event-chat/event-chat.component.scss
+++ b/src/app/main/components/event-chat/event-chat.component.scss
@@ -66,6 +66,16 @@ p, span {
     font-size: 12px;
     color: #121218;
 }
+.flex {
+    display: flex;
+    align-items: center;
+}
+.avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 5px;
+}
 @media(max-width: 510px) {
     .box__data {
         padding: 0;
