--- a/src/app/main/components/event/event.component.html
+++ b/src/app/main/components/event/event.component.html
@@ -172,7 +172,8 @@
                             participants__cell_create: application.user_status.id == 1,
                             participants__cell_moderator: application.user_status.id == 2, 
                             participants__cell_player: application.user_status.id == 3}">
-                            <img src="{{application.user.profile.photo_small}}" alt="avatar" class="participants__avatar">
+                            <img *ngIf="application.user.profile.photo_small" src="{{application.user.profile.photo_small}}" alt="avatar" class="participants__avatar">
+                            <div *ngIf="!application.user.profile.photo_small" class="participants__avatar"></div>
                             <div>
                                 <p class="participants__status">[{{application.user_status.status}}]</p>
                                 <p class="participants__name">{{application.user.full_name}}</p>
@@ -182,7 +183,8 @@
         
                     <div class="participants__list" *ngIf="view.guests">
                         <div class="participants__cell" *ngFor="let guest of event.guests">
-                            <img src="{{application.user.profile.photo_small}}" alt="avatar" class="participants__avatar">
+                            <img *ngIf="application.user.profile.photo_small" src="{{application.user.profile.photo_small}}" alt="avatar" class="participants__avatar">
+                            <div *ngIf="!application.user.profile.photo_small" class="participants__avatar"></div>
                             <div>
                                 <p class="participants__status">[игрок]</p>
                                 <p class="participants__name">{{guest.name}}</p>
@@ -192,7 +194,8 @@
 
                     <div class="participants__list" *ngIf="view.refused">
                         <div class="participants__cell" *ngFor="let application of applications" (click)="getUser(application.user.id)">
-                            <img src="{{application.user.profile.photo_small}}" alt="avatar" class="participants__avatar">
+                            <img *ngIf="application.user.profile.photo_small" src="{{application.user.profile.photo_small}}" alt="avatar" class="participants__avatar">
+                            <div *ngIf="!application.user.profile.photo_small" class="participants__avatar"></div>
                             <div>
                                 <p class="participants__status">[игрок]</p>
                                 <p class="participants__name">{{application.user.full_name}}</p>
@@ -202,7 +205,8 @@
 
                     <div class="participants__list" *ngIf="view.invited">
                         <div class="participants__cell" *ngFor="let application of applications" (click)="getUser(application.user.id)">
-                            <img src="{{application.user.profile.photo_small}}" alt="avatar" class="participants__avatar">
+                            <img *ngIf="application.user.profile.photo_small" src="{{application.user.profile.photo_small}}" alt="avatar" class="participants__avatar">
+                            <div *ngIf="!application.user.profile.photo_small" class="participants__avatar"></div>
                             <div>
                                 <p class="participants__status">[игрок]</p>
                                 <p class="participants__name">{{application.user.full_name}}</p>
@@ -212,7 +216,8 @@
 
                     <div class="participants__list" *ngIf="view.rejected">
                         <div class="participants__cell" *ngFor="let application of applications" (click)="getUser(application.user.id)">
-                            <img src="{{application.user.profile.photo_small}}" alt="avatar" class="participants__avatar">
+                            <img *ngIf="application.user.profile.photo_small" src="{{application.user.profile.photo_small}}" alt="avatar" class="participants__avatar">
+                            <div *ngIf="!application.user.profile.photo_small" class="participants__avatar"></div>
                             <div>
                                 <p class="participants__status">[игрок]</p>
                                 <p class="participants__name">{{application.user.full_name}}</p>
@@ -230,7 +235,8 @@
         </div>
         <div class="user" *ngIf="status">
             <div class="user__flex">
-                <img src="{{user?.profile.photo_medium}}" alt="avatar" class="user__avatar">
+                <img *ngIf="user.profile.photo_medium" src="{{user?.profile.photo_medium}}" alt="avatar" class="user__avatar">
+                <div *ngIf="!user.profile.photo_medium" class="user__avatar"></div>
                 <div>
                     <p class="user__status">[{{status}}]</p>
                     <p class="user__number">{{user?.phone_number}}</p>
