--- a/src/app/main/components/user/user.component.html
+++ b/src/app/main/components/user/user.component.html
@@ -41,4 +41,5 @@
     (cropperReady)="cropperReady()"
     (loadImageFailed)="loadImageFailed()"
     style="width: 300px;"
+    *ngIf="isCrop"
 ></image-cropper>
