--- a/src/app/auth/components/register-profile/register-profile.component.html
+++ b/src/app/auth/components/register-profile/register-profile.component.html
@@ -76,4 +76,5 @@
     (cropperReady)="cropperReady()"
     (loadImageFailed)="loadImageFailed()"
     style="width: 300px;"
+    *ngIf="isCrop"
 ></image-cropper>
