bugfix src profile

--- a/src/app/main/components/user/user.component.html
+++ b/src/app/main/components/user/user.component.html
@@ -22,7 +22,7 @@
                     <input matInput formControlName="username">
                 </mat-form-field>
                 <button mat-raised-button class="btn" [disabled]="changeForm.invalid || changeForm.disabled">Сохранить</button>
-                <button mat-raised-button class="btn" type="button" [routerLink]="['../../../auth/register-profile']">Профиль</button>
+                <button mat-raised-button class="btn" type="button" [routerLink]="['../auth/register-profile']">Профиль</button>
                 <button mat-raised-button class="btn" type="button" [routerLink]="['../user-change']">Конфиденциальность</button>
             </div>
         </div>
